# tfg-common-types

./: Cargo.toml  generate_bindings.sh
src/: crypto.rs  firmware_app.rs  lib.rs
