[package]
name = "common-types"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
postcard-bindgen = "0.7.1"
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }


[features]
default = ["std"]
std = ["serde/std"]
