[package]
name = "common-types"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
postcard-bindgen = { version = "0.7.1", features = ["heapless"] }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
postcard = { git = "https://github.com/jamesmunns/postcard.git", rev = "de182557cff45f2ca9b2b67a6b93be5917612a44", default-features = false, features = ["experimental-derive", "heapless-v0_8"] }
heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }

serde-big-array = { version = "0.5.1", default-features = false }
uuid = { version = "1.21.0", features = ["serde"], default-features = false }


[features]
default = ["std"]
std = ["serde/std", "postcard-bindgen/generating"]
